--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
 pymorphy2==0.9.1
-pandas==2.1.4
-pymorphy2-dicts
-spacy==3.7.2
-spacy-udpipe==1.0.0
-stanza==1.7.0
-deplacy==2.0.8
+pandas==1.5.3 #+
+#pymorphy2-dicts
+#spacy==3.7.2
+#spacy-udpipe==1.0.0
+stanza==1.8.2
+#deplacy==2.0.8
 natasha==1.6.0
-scipy==1.12.0
-Cython==3.0.8
-scikit-learn==1.3.2
-deeppavlov==1.5.0
-transformers==4.39.0
-torch==2.2.1
-sentencepiece==0.2.0
-tensorflow==2.16.1
-tf-keras==2.16.0
-beautifulsoup4==4.12.3
-requests==2.31.0
-selenium==4.16.0
-lxml==5.1.0
-openpyxl
-datasets==2.18.0
-spark-nlp==5.3.3
-pyspark==3.5.1
-taaled==0.32
-pylats==0.33
-tokenizers==0.19.1
+#scipy==1.12.0
+#Cython==3.0.8
+#scikit-learn==1.3.2
+deeppavlov==1.6.0 #+
+#transformers==4.39.0
+#torch==2.2.1
+#sentencepiece==0.2.0
+#tensorflow==2.16.1
+#tf-keras==2.16.0
+#beautifulsoup4==4.12.3
+#requests==2.31.0
+#selenium==4.16.0
+#lxml==5.1.0
+#openpyxl
+#datasets==2.18.0
+#spark-nlp==5.3.3
+#pyspark==3.5.1
+#taaled==0.32
+#pylats==0.33
+#tokenizers==0.19.1
