--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,10 @@ beautifulsoup4==4.12.3
 requests==2.31.0
 selenium==4.16.0
 #lxml==5.1.0
-#openpyxl
+openpyxl==3.1.2
 datasets==2.18.0
 #spark-nlp==5.3.3
 #pyspark==3.5.1
-#taaled==0.32
-#pylats==0.33
+taaled==0.32
+pylats==0.33
 #tokenizers==0.19.1
