--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,27 @@
-pymorphy2==0.9.1
-pandas==1.5.3 #+
-#pymorphy2-dicts
-spacy==3.7.4
-#spacy-udpipe==1.0.0
-stanza==1.8.2
-#deplacy==2.0.8
-natasha==1.6.0
-#scipy==1.12.0
+beautifulsoup4==4.12.3
 #Cython==3.0.8
+datasets==2.18.0
+deeppavlov==1.6.0
+#deplacy==2.0.8
+#lxml==5.1.0
+natasha==1.6.0
+openpyxl==3.1.2
+pandas==1.5.3
+pylats==0.33
+#pymorphy2-dicts
+pymorphy2==0.9.1
+#pyspark==3.5.1
+requests==2.31.0
 #scikit-learn==1.3.2
-deeppavlov==1.6.0 #+
-transformers==4.30.0
-torch==1.13.1
+#scipy==1.12.0
+selenium==4.16.0
 #sentencepiece==0.2.0
+#spacy-udpipe==1.0.0
+spacy==3.7.4
+stanza==1.8.2
+taaled==0.32
 #tensorflow==2.16.1
 #tf-keras==2.16.0
-beautifulsoup4==4.12.3
-requests==2.31.0
-selenium==4.16.0
-#lxml==5.1.0
-openpyxl==3.1.2
-datasets==2.18.0
-#spark-nlp==5.3.3
-#pyspark==3.5.1
-taaled==0.32
-pylats==0.33
 #tokenizers==0.19.1
+torch==1.13.1
+transformers==4.30.0
